src/parser/CmmParser.java
// Generated from E:/1. Universidad/2.DLP/Lab13/src/parser\Cmm.g4 by ANTLR 4.9.1
package parser;

    import ast.*;
    import ast.definitions.*;
    import ast.expressions.*;
    import ast.statements.*;
    import ast.types.*;
    import parser.LexerHelper;
    import java.util.LinkedList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ID=37, REAL_CONSTANT=38, 
		FLOAT_CONSTANT=39, INT_CONSTANT=40, COMMENTS=41, WS=42, CHAR_CONSTANT=43, 
		EOL=44;
	public static final int
		RULE_program = 0, RULE_definitions = 1, RULE_variableDefinition = 2, RULE_type = 3, 
		RULE_structType = 4, RULE_recordField = 5, RULE_recordField_usage = 6, 
		RULE_functionDefinition = 7, RULE_mainFunction = 8, RULE_functionInvocation = 9, 
		RULE_parameters = 10, RULE_functionBlock = 11, RULE_statement = 12, RULE_statementBlock = 13, 
		RULE_expression = 14, RULE_primitive_type = 15, RULE_primitive_function_type = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definitions", "variableDefinition", "type", "structType", 
			"recordField", "recordField_usage", "functionDefinition", "mainFunction", 
			"functionInvocation", "parameters", "functionBlock", "statement", "statementBlock", 
			"expression", "primitive_type", "primitive_function_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "';'", "'['", "']'", "'struct'", "'{'", "'}'", "'void'", 
			"'main'", "'('", "')'", "'write'", "'read'", "'='", "'while'", "'if'", 
			"'else'", "'return'", "'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", 
			"'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", "'int'", 
			"'char'", "'double'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ID", "REAL_CONSTANT", "FLOAT_CONSTANT", "INT_CONSTANT", "COMMENTS", 
			"WS", "CHAR_CONSTANT", "EOL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public DefinitionsContext d;
		public MainFunctionContext m;
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public DefinitionsContext definitions() {
			return getRuleContext(DefinitionsContext.class,0);
		}
		public MainFunctionContext mainFunction() {
			return getRuleContext(MainFunctionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			((ProgramContext)_localctx).d = definitions();
			setState(35);
			((ProgramContext)_localctx).m = mainFunction();
			 ((ProgramContext)_localctx).d.ast.add(((ProgramContext)_localctx).m.ast); 
			setState(37);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  new Program(0,0,((ProgramContext)_localctx).d.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionsContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public VariableDefinitionContext v;
		public FunctionDefinitionContext f;
		public List<VariableDefinitionContext> variableDefinition() {
			return getRuleContexts(VariableDefinitionContext.class);
		}
		public VariableDefinitionContext variableDefinition(int i) {
			return getRuleContext(VariableDefinitionContext.class,i);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public DefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitions; }
	}

	public final DefinitionsContext definitions() throws RecognitionException {
		DefinitionsContext _localctx = new DefinitionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definitions);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(46);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(40);
						((DefinitionsContext)_localctx).v = variableDefinition();
						 _localctx.ast.addAll(((DefinitionsContext)_localctx).v.ast); 
						}
						break;
					case 2:
						{
						setState(43);
						((DefinitionsContext)_localctx).f = functionDefinition();
						 _localctx.ast.add(((DefinitionsContext)_localctx).f.ast);
						}
						break;
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDefinitionContext extends ParserRuleContext {
		public List<VariableDefinition> ast = new ArrayList<>();
		public TypeContext t;
		public Token id1;
		public Token id2;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDefinition; }
	}

	public final VariableDefinitionContext variableDefinition() throws RecognitionException {
		VariableDefinitionContext _localctx = new VariableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			((VariableDefinitionContext)_localctx).t = type(0);
			setState(52);
			((VariableDefinitionContext)_localctx).id1 = match(ID);
			 _localctx.ast.add( new VariableDefinition(((VariableDefinitionContext)_localctx).t.ast.getLine(),((VariableDefinitionContext)_localctx).t.ast.getColumn(),((VariableDefinitionContext)_localctx).t.ast,(((VariableDefinitionContext)_localctx).id1!=null?((VariableDefinitionContext)_localctx).id1.getText():null)) ); 
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(54);
				match(T__0);
				setState(55);
				((VariableDefinitionContext)_localctx).id2 = match(ID);
				 _localctx.ast.add( new VariableDefinition(((VariableDefinitionContext)_localctx).t.ast.getLine(),((VariableDefinitionContext)_localctx).t.ast.getColumn(),((VariableDefinitionContext)_localctx).t.ast,(((VariableDefinitionContext)_localctx).id2!=null?((VariableDefinitionContext)_localctx).id2.getText():null)) ); 
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type ast;
		public TypeContext t;
		public Primitive_typeContext primitive_type;
		public StructTypeContext structType;
		public Token i;
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public StructTypeContext structType() {
			return getRuleContext(StructTypeContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__33:
			case T__34:
			case T__35:
				{
				setState(65);
				((TypeContext)_localctx).primitive_type = primitive_type();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).primitive_type.ast; 
				}
				break;
			case T__4:
				{
				setState(68);
				((TypeContext)_localctx).structType = structType();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).structType.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					_localctx.t = _prevctx;
					_localctx.t = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(73);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(74);
					match(T__2);
					setState(75);
					((TypeContext)_localctx).i = match(INT_CONSTANT);
					setState(76);
					match(T__3);
					 ((TypeContext)_localctx).ast =  ArrayType.createArray( ((TypeContext)_localctx).t.ast.getLine(),((TypeContext)_localctx).t.ast.getColumn(),((TypeContext)_localctx).t.ast,LexerHelper.lexemeToInt((((TypeContext)_localctx).i!=null?((TypeContext)_localctx).i.getText():null)) ); 
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StructTypeContext extends ParserRuleContext {
		public StructType ast;
		public Token s;
		public RecordFieldContext fields;
		public RecordFieldContext recordField() {
			return getRuleContext(RecordFieldContext.class,0);
		}
		public StructTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structType; }
	}

	public final StructTypeContext structType() throws RecognitionException {
		StructTypeContext _localctx = new StructTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			((StructTypeContext)_localctx).s = match(T__4);
			setState(84);
			match(T__5);
			setState(85);
			((StructTypeContext)_localctx).fields = recordField();
			setState(86);
			match(T__6);
			 ((StructTypeContext)_localctx).ast =   new StructType( ((StructTypeContext)_localctx).s.getLine(),((StructTypeContext)_localctx).s.getCharPositionInLine()+1,((StructTypeContext)_localctx).fields.ast ); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordFieldContext extends ParserRuleContext {
		public List<RecordField> ast = new ArrayList<>();
		public RecordField_usageContext r;
		public List<RecordField_usageContext> recordField_usage() {
			return getRuleContexts(RecordField_usageContext.class);
		}
		public RecordField_usageContext recordField_usage(int i) {
			return getRuleContext(RecordField_usageContext.class,i);
		}
		public RecordFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordField; }
	}

	public final RecordFieldContext recordField() throws RecognitionException {
		RecordFieldContext _localctx = new RecordFieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_recordField);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((RecordFieldContext)_localctx).r = recordField_usage();
			 _localctx.ast.addAll( ((RecordFieldContext)_localctx).r.ast ); 
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(91);
					match(T__1);
					setState(92);
					((RecordFieldContext)_localctx).r = recordField_usage();
					 _localctx.ast.addAll( ((RecordFieldContext)_localctx).r.ast ); 
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(100);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordField_usageContext extends ParserRuleContext {
		public List<RecordField> ast = new ArrayList<>();
		public Primitive_typeContext t1;
		public Token ID;
		public Token id2;
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public RecordField_usageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recordField_usage; }
	}

	public final RecordField_usageContext recordField_usage() throws RecognitionException {
		RecordField_usageContext _localctx = new RecordField_usageContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recordField_usage);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			((RecordField_usageContext)_localctx).t1 = primitive_type();
			setState(103);
			((RecordField_usageContext)_localctx).ID = match(ID);
			 _localctx.ast.add(new RecordField( ((RecordField_usageContext)_localctx).t1.ast.getLine(),((RecordField_usageContext)_localctx).t1.ast.getColumn(),((RecordField_usageContext)_localctx).t1.ast,(((RecordField_usageContext)_localctx).ID!=null?((RecordField_usageContext)_localctx).ID.getText():null) )); 
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(105);
				match(T__0);
				setState(106);
				((RecordField_usageContext)_localctx).id2 = match(ID);
				 _localctx.ast.add(new RecordField( ((RecordField_usageContext)_localctx).t1.ast.getLine(),((RecordField_usageContext)_localctx).t1.ast.getColumn(),((RecordField_usageContext)_localctx).t1.ast,(((RecordField_usageContext)_localctx).id2!=null?((RecordField_usageContext)_localctx).id2.getText():null) )); 
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Primitive_function_typeContext t1;
		public Token id1;
		public ParametersContext param1;
		public FunctionBlockContext block1;
		public Primitive_function_typeContext primitive_function_type() {
			return getRuleContext(Primitive_function_typeContext.class,0);
		}
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public FunctionBlockContext functionBlock() {
			return getRuleContext(FunctionBlockContext.class,0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			((FunctionDefinitionContext)_localctx).t1 = primitive_function_type();
			setState(114);
			((FunctionDefinitionContext)_localctx).id1 = match(ID);
			setState(115);
			((FunctionDefinitionContext)_localctx).param1 = parameters();
			setState(116);
			((FunctionDefinitionContext)_localctx).block1 = functionBlock();
			 ((FunctionDefinitionContext)_localctx).ast =  new FunctionDefinition(((FunctionDefinitionContext)_localctx).t1.ast.getLine(),((FunctionDefinitionContext)_localctx).t1.ast.getColumn(),(((FunctionDefinitionContext)_localctx).id1!=null?((FunctionDefinitionContext)_localctx).id1.getText():null),new FunctionType(((FunctionDefinitionContext)_localctx).t1.ast.getLine(),((FunctionDefinitionContext)_localctx).t1.ast.getColumn(),((FunctionDefinitionContext)_localctx).param1.ast,((FunctionDefinitionContext)_localctx).t1.ast),((FunctionDefinitionContext)_localctx).block1.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainFunctionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public Token t;
		public Token m;
		public FunctionBlockContext f;
		public FunctionBlockContext functionBlock() {
			return getRuleContext(FunctionBlockContext.class,0);
		}
		public MainFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainFunction; }
	}

	public final MainFunctionContext mainFunction() throws RecognitionException {
		MainFunctionContext _localctx = new MainFunctionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mainFunction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((MainFunctionContext)_localctx).t = match(T__7);
			setState(120);
			((MainFunctionContext)_localctx).m = match(T__8);
			setState(121);
			match(T__9);
			setState(122);
			match(T__10);
			setState(123);
			((MainFunctionContext)_localctx).f = functionBlock();
			 ((MainFunctionContext)_localctx).ast =  new FunctionDefinition(((MainFunctionContext)_localctx).t.getLine(),((MainFunctionContext)_localctx).t.getCharPositionInLine()+1,(((MainFunctionContext)_localctx).m!=null?((MainFunctionContext)_localctx).m.getText():null),new FunctionType(((MainFunctionContext)_localctx).t.getLine(),((MainFunctionContext)_localctx).t.getCharPositionInLine()+1,new ArrayList<VariableDefinition>(),new VoidType(((MainFunctionContext)_localctx).t.getLine(),((MainFunctionContext)_localctx).t.getCharPositionInLine()+1)),((MainFunctionContext)_localctx).f.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
